src/App.css
.App {
  text-align: center;
  background-color: rgb(37, 44, 54);

}

.all-tiles{
  width: 90vw;
  margin-left:5vw;
  margin-right: 5vw;
  text-align: left;
  margin-top: 400px;
}

.video{
    margin-top: 20px;
    margin-right: auto;
    margin-left: auto;
  width: 90vw;
  height: 50.625vw;
  max-height: 700px;
  max-width: 1244.444px;
}

.ytp-pause-overlay{
  z-index: -10;
  opacity: 0;
}

.ytp-button{
  z-index: -10;
  opacity: 0;
}

.tiles{
  cursor: pointer;
  width: calc(78vw / 2);
  text-align: left;
  margin: 3vw;
  display: inline-flex;
  top: 0;
  left: 0;
  margin-bottom: 20px;
  /* opacity: 0.85;
  filter: grayscale(0%); */

}

/* .tiles:hover{
  opacity: 1;
  filter: grayscale(90%);
} */

.tileImg{
  width: 100%;
  aspect-ratio: 16 / 9;
  object-fit: cover;
  object-position: center;
  filter: invert(0);
}

.tileImg:hover{
  width: 100%;
  filter: invert(.1);
}

.tileImgPortraitWrapper{
  width: 100%;
  position: relative;
  padding-bottom: 56.25%;
  overflow: hidden;
}

.tileImgPortrait{
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}


.title-text{
  font-size: 2rem;
  color: whitesmoke;
  text-align: left;
  font-family: 'Raleway', sans-serif;
  font-weight: 500;
}


.description{
  font-size: 1.4rem;
  color: whitesmoke;
  text-align: left;
  font-family: 'Raleway', sans-serif;
  font-weight: 200;
}

.role{
  font-size: 1.4rem;
  color: rgb(255, 238, 106);
  text-align: left;
  font-family: 'Raleway', sans-serif;
  font-weight: 200;
}


.genre{
  font-size: 1.2rem;
  color: rgb(232, 252, 255);
  text-align: left;
  font-family: 'Raleway', sans-serif;
  font-style: italic;
  font-weight: 100;
}

.project-container{
  width: 90vw;
  margin-left:5vw;
  margin-right: 5vw;
  margin-top: 50px;
  text-align: left;
}

.project{
  position: relative;
  text-align: center;
}

.close{
  z-index: 10;
  color: rgb(224, 232, 234);
  font-size: 2rem;
  position: absolute;
  right: 30px;
  top: 20px;
  cursor: pointer;

}

.close:hover{
  color: rgb(255, 255, 255);
  font-size: 2.1rem;
}


.hide{
  display: none;
  
}

.show{
  display: inline;
  

}


#project{
  position: fixed;
  z-index: 100;
  height: 100vh;
  background-color: rgb(14, 23, 30,0.9);
  left: 0;
  top: 0;
  
}

/* TABLET */
@media only screen and (max-width: 900px) and (min-width: 601px) {
  .all-tiles{
    margin-top: 340px;
  }
  .title-text{
    font-size: 1.7rem;
  }

  .description{
    font-size: 1.3rem;
  }

  .role{
    font-size: 1.3rem;
  }

  .genre{
    font-size: 1rem;}

    .project-container{
      
      margin-top: 100px;
    }

}
/* MOBILE */
@media only screen and (max-width: 600px) {
  .all-tiles{
    margin-top: 240px;
  
  }
  .tiles{
    width: 100%;
    margin: 0;
    margin-bottom: 20px;
    margin-top: 20px;
  }
  .title-text{
    font-size: 1.5rem;
  }

  .description{
    font-size: 1rem;
  }

  .role{
    font-size: 1rem;
  }

  .genre{
    font-size: 0.8rem;}

    .project-container{
      
      margin-top: 100px;
    }

}

